--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div>
+        <h1>My first Git website</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, quas veritatis. Nobis ab alias possimus,
+            quae odio nam sequi deleniti rem, similique consequatur, vitae vel placeat aliquam blanditiis fugiat
+            quaerat? Nostrum ducimus accusamus eius sit dolor voluptate, sed assumenda deleniti libero qui ut incidunt
+            quo. Ducimus ratione nulla autem et.</p>
+    </div>
 </body>
+
 </html>
