second commit added

--- a/index.html
+++ b/index.html
@@ -10,11 +10,28 @@
 
 <body>
     <div>
-        <h1>My first Git website</h1>
+        <h1>My first Git Blog</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, quas veritatis. Nobis ab alias possimus,
             quae odio nam sequi deleniti rem, similique consequatur, vitae vel placeat aliquam blanditiis fugiat
             quaerat? Nostrum ducimus accusamus eius sit dolor voluptate, sed assumenda deleniti libero qui ut incidunt
-            quo. Ducimus ratione nulla autem et.</p>
+            quo. Ducimus ratione nulla autem et.
+        </p>
+    </div>
+    <div>
+        <h1>My Second Git Blog</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, quas veritatis. Nobis ab alias possimus,
+            quae odio nam sequi deleniti rem, similique consequatur, vitae vel placeat aliquam blanditiis fugiat
+            quaerat? Nostrum ducimus accusamus eius sit dolor voluptate, sed assumenda deleniti libero qui ut incidunt
+            quo. Ducimus ratione nulla autem et.
+        </p>
+    </div>
+    <div>
+        <h1>My Third Git Blog</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, quas veritatis. Nobis ab alias possimus,
+            quae odio nam sequi deleniti rem, similique consequatur, vitae vel placeat aliquam blanditiis fugiat
+            quaerat? Nostrum ducimus accusamus eius sit dolor voluptate, sed assumenda deleniti libero qui ut incidunt
+            quo. Ducimus ratione nulla autem et.
+        </p>
     </div>
 </body>
 
