added the list of adding code

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
             quo. Ducimus ratione nulla autem et.
         </p>
     </div>
+    <h2>How to add incremental code</h2>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m"added code"</li>
+        <li>git push</li>
+    </ul>
 </body>
 
 </html>
