one picture added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         <li>git commit -m"added code"</li>
         <li>git push</li>
     </ul>
+
+    <h3>A village photo</h3>
+    <div class="img">
+    </div>
 </body>
 
 </html>
